fix: .roleにvertical-align: middle追加＋.totalをflex化（縦中央揃え）

--- a/views/default.sass
+++ b/views/default.sass
@@ -457,6 +457,9 @@ section.fav-entries
 
 section.tagging-dictionary
   .total
+    display: flex
+    align-items: center
+    gap: 0.2em
     margin: 0 1em
   article.disabled
     background:
@@ -723,6 +726,7 @@ a:hover
 
 .role
   display: inline-block
+  vertical-align: middle
   margin: 1px 2px
   padding: 2px 0.5em
   background:
